tests/fail/fail_return_type_mismatch.kl
fn inisiu() {
    mostran(f"{dobra(3)}");
}

fn dobra(nter x) nter {
    divolvi f"nau e um nter";
}
